# Boost-Mod-for-Sonic-Heroes

./: Boost-Mod-for-Sonic-Heroes.csproj  Boost-Mod-for-Sonic-Heroes.sln  CMakeLists.txt  Config.cs  Mod.cs  ModConfig.json  README.md  Sonic Heroes Boost Mod.sln  build.sh
Boost For All SH/: Boost For All SH.sln
Boost For All SH/Boost For All SH/: Boost For All SH.vcxproj  Boost For All SH.vcxproj.filters  Fonksiyonlar.h  Temel Kod.h  dllmain.cpp  pch.h
Boost For Sonic Heroes/: Boost For Sonic Heroes.csproj  BuildLinked.ps1  Config.cs  Mod.cs  ModConfig.json  Publish.ps1
Boost For Sonic Heroes/Template/: ModBase.cs  ModContext.cs  Startup.cs
Boost Speed DLL/: Boost Speed DLL.sln
Boost Speed DLL/Boost Speed DLL/: Boost Speed DLL.vcxproj  Temel Kod.h
Sonic Heroes Boost Mod/: Sonic Heroes Boost Mod.vcxproj  dllmain.cpp
Sonic Heroes Boost Mod (All Characters)/: Sonic Heroes Boost Mod (All Characters).sln
Sonic Heroes Boost Mod (All Characters)/Boost For All Mod Config/: Boost For All Mod Config.csproj  BuildLinked.ps1  Config.cs  Mod.cs  ModConfig.json  Publish.ps1
Sonic Heroes Boost Mod (All Characters)/Sonic Heroes Boost Mod (All Characters)/: Sonic Heroes Boost Mod (All Characters).vcxproj  Sonic Heroes Boost Mod (All Characters).vcxproj.filters  dllmain.cpp
Sonic Heroes Boost Mod (All Characters)/sonicheroes.mechanic.boostforsh/: Boost For All Mod Config.deps.json
Sonic Heroes Boost Mod (Speed Characters)/: Sonic Heroes Boost Mod (Speed Characters).sln
Template/: ModBase.cs  ModContext.cs  Startup.cs
src/: main.cpp
(+128 files in other folders)
